// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component renders correctly with gradient disabled 1`] = `
<View
  style={
    {
      "height": 300,
      "width": 300,
    }
  }
>
  <RCTScrollView
    horizontal={false}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    scrollEventThrottle={20}
    showsHorizontalScrollIndicator={false}
    showsVerticalScrollIndicator={false}
    snapToInterval={43}
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 43,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Arial",
              "fontSize": 21.5,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 43,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Arial",
              "fontSize": 21.5,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 43,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Arial",
              "fontSize": 21.5,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 43,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "red",
              "fontFamily": "Arial",
              "fontSize": 21.5,
            }
          }
        >
          No items
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 43,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Arial",
              "fontSize": 21.5,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 43,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Arial",
              "fontSize": 21.5,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 43,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Arial",
              "fontSize": 21.5,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <View
    pointerEvents="none"
    style={
      [
        {
          "position": "absolute",
          "width": "100%",
        },
        {
          "borderBottomColor": "#cecece",
          "borderBottomWidth": 1,
          "top": 129,
        },
      ]
    }
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "position": "absolute",
          "width": "100%",
        },
        {
          "borderTopColor": "#cecece",
          "borderTopWidth": 1,
          "bottom": 129,
        },
      ]
    }
  />
</View>
`;

exports[`Components renders correctly with defaults 1`] = `
<View
  style={
    {
      "height": 300,
      "width": 300,
    }
  }
>
  <RCTScrollView
    horizontal={false}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    scrollEventThrottle={20}
    showsHorizontalScrollIndicator={false}
    showsVerticalScrollIndicator={false}
    snapToInterval={43}
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 43,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Arial",
              "fontSize": 21.5,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 43,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Arial",
              "fontSize": 21.5,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 43,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Arial",
              "fontSize": 21.5,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 43,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "red",
              "fontFamily": "Arial",
              "fontSize": 21.5,
            }
          }
        >
          No items
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 43,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Arial",
              "fontSize": 21.5,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 43,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Arial",
              "fontSize": 21.5,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 43,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "#000",
              "fontFamily": "Arial",
              "fontSize": 21.5,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <BVLinearGradient
    colors={
      [
        4294967295,
        3875536895,
        3019898879,
        2164260863,
      ]
    }
    endPoint={
      {
        "x": 0.5,
        "y": 1,
      }
    }
    locations={null}
    pointerEvents="none"
    startPoint={
      {
        "x": 0.5,
        "y": 0,
      }
    }
    style={
      [
        {
          "position": "absolute",
          "width": "100%",
        },
        {
          "height": 129,
          "top": 0,
        },
      ]
    }
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "position": "absolute",
          "width": "100%",
        },
        {
          "borderBottomColor": "#cecece",
          "borderBottomWidth": 1,
          "top": 129,
        },
      ]
    }
  />
  <BVLinearGradient
    colors={
      [
        2164260863,
        3019898879,
        3875536895,
        4294967295,
      ]
    }
    endPoint={
      {
        "x": 0.5,
        "y": 1,
      }
    }
    locations={null}
    pointerEvents="none"
    startPoint={
      {
        "x": 0.5,
        "y": 0,
      }
    }
    style={
      [
        {
          "position": "absolute",
          "width": "100%",
        },
        {
          "bottom": 0,
          "height": 129,
        },
      ]
    }
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "position": "absolute",
          "width": "100%",
        },
        {
          "borderTopColor": "#cecece",
          "borderTopWidth": 1,
          "bottom": 129,
        },
      ]
    }
  />
</View>
`;

exports[`Components renders correctly with defaults 2`] = `
<View
  style={
    {
      "alignItems": "center",
      "height": 30,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      {
        "color": "white",
        "fontFamily": "Georgia",
        "fontSize": 14,
      }
    }
  >
    Item
  </Text>
</View>
`;

exports[`Components renders correctly with updated params 1`] = `
<View
  style={
    {
      "height": 400,
      "width": 400,
    }
  }
>
  <RCTScrollView
    horizontal={false}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    scrollEventThrottle={20}
    showsHorizontalScrollIndicator={false}
    showsVerticalScrollIndicator={false}
    snapToInterval={80}
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 80,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "blue",
              "fontFamily": "Arial",
              "fontSize": 18,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 80,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "blue",
              "fontFamily": "Arial",
              "fontSize": 18,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 80,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "blue",
              "fontFamily": "Arial",
              "fontSize": 18,
            }
          }
        >
          Item 1
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 80,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "blue",
              "fontFamily": "Arial",
              "fontSize": 18,
            }
          }
        >
          Item 2
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 80,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "blue",
              "fontFamily": "Arial",
              "fontSize": 18,
            }
          }
        >
          Item 3
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 80,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "blue",
              "fontFamily": "Arial",
              "fontSize": 18,
            }
          }
        >
          Item 4
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 80,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "blue",
              "fontFamily": "Arial",
              "fontSize": 18,
            }
          }
        >
          Item 5
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 80,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "blue",
              "fontFamily": "Arial",
              "fontSize": 18,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "height": 80,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "blue",
              "fontFamily": "Arial",
              "fontSize": 18,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <BVLinearGradient
    colors={
      [
        4294967295,
        3875536895,
        3019898879,
        2164260863,
      ]
    }
    endPoint={
      {
        "x": 0.5,
        "y": 1,
      }
    }
    locations={null}
    pointerEvents="none"
    startPoint={
      {
        "x": 0.5,
        "y": 0,
      }
    }
    style={
      [
        {
          "position": "absolute",
          "width": "100%",
        },
        {
          "height": 160,
          "top": 0,
        },
      ]
    }
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "position": "absolute",
          "width": "100%",
        },
        {
          "borderBottomColor": "gray",
          "borderBottomWidth": 1,
          "top": 160,
        },
      ]
    }
  />
  <BVLinearGradient
    colors={
      [
        2164260863,
        3019898879,
        3875536895,
        4294967295,
      ]
    }
    endPoint={
      {
        "x": 0.5,
        "y": 1,
      }
    }
    locations={null}
    pointerEvents="none"
    startPoint={
      {
        "x": 0.5,
        "y": 0,
      }
    }
    style={
      [
        {
          "position": "absolute",
          "width": "100%",
        },
        {
          "bottom": 0,
          "height": 160,
        },
      ]
    }
  />
  <View
    pointerEvents="none"
    style={
      [
        {
          "position": "absolute",
          "width": "100%",
        },
        {
          "borderTopColor": "gray",
          "borderTopWidth": 1,
          "bottom": 160,
        },
      ]
    }
  />
</View>
`;

exports[`Components renders correctly with updated params 2`] = `
<View
  style={
    {
      "alignItems": "center",
      "height": 40,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      {
        "color": "green",
        "fontFamily": "Arial",
        "fontSize": 22,
      }
    }
  >
    Item label
  </Text>
</View>
`;
